@@ -396,7 +396,11 @@ rebar-directories-compile:
         test ! -e include && \
         $(LN_S) $(abs_top_srcdir)/lib/cloudi_core/include || exit 0)
 
-erlang-applications-scope-add:
+erlang-applications-scope-add: scoped
+
+scoped: $(top_srcdir)/external/README.markdown
+	touch scoped
+	$(ESCRIPT) $(top_srcdir)/lib/reltool_util/scope $(SCOPE_ARGS) -u
 	$(ESCRIPT) $(top_srcdir)/lib/reltool_util/scope $(SCOPE_ARGS)
 
 rebar-compile: erlang-applications-scope-add \
@@ -414,51 +418,94 @@ rebar-clean:
      exit 0)
 
 rebar-directories-clean: rebar-clean
-	rmdir $(top_builddir)/lib/cloudi_core/ebin \
-          $(top_builddir)/lib/cloudi_service_api_requests/ebin \
-          $(top_builddir)/lib/cloudi_service_db/ebin \
-          $(top_builddir)/lib/cloudi_service_db_cassandra/ebin \
-          $(top_builddir)/lib/cloudi_service_db_couchdb/ebin \
-          $(top_builddir)/lib/cloudi_service_db_elasticsearch/ebin \
-          $(top_builddir)/lib/cloudi_service_db_memcached/ebin \
-          $(top_builddir)/lib/cloudi_service_db_mysql/ebin \
-          $(top_builddir)/lib/cloudi_service_db_pgsql/ebin \
-          $(top_builddir)/lib/cloudi_service_db_tokyotyrant/ebin \
-          $(top_builddir)/lib/cloudi_service_filesystem/ebin \
-          $(top_builddir)/lib/cloudi_service_http_cowboy/ebin \
-          $(top_builddir)/lib/cloudi_service_http_elli/ebin \
-          $(top_builddir)/lib/cloudi_service_map_reduce/ebin \
-          $(top_builddir)/lib/cloudi_service_quorum/ebin \
-          $(top_builddir)/lib/cloudi_service_tcp/ebin \
-          $(top_builddir)/lib/cloudi_service_timers/ebin \
-          $(top_builddir)/lib/cloudi_service_udp/ebin \
-          $(top_builddir)/lib/cloudi_service_work_manager/ebin \
-          $(top_builddir)/lib/cloudi_service_zeromq/ebin \
-          $(top_builddir)/lib/pqueue/ebin \
-          $(top_builddir)/lib/quickrand/ebin \
-          $(top_builddir)/lib/cpg/ebin \
-          $(top_builddir)/lib/uuid/ebin \
-          $(top_builddir)/lib/trie/ebin \
-          $(top_builddir)/lib/reltool_util/ebin \
-          $(top_builddir)/lib/key2value/ebin \
-          $(top_builddir)/external/nodefinder/nodefinder/ebin \
-          $(top_builddir)/external/nodefinder/ec2nodefinder/ebin \
-          $(top_builddir)/external/nodefinder/combonodefinder/ebin \
-          $(top_builddir)/external/jsx/ebin \
-          $(top_builddir)/external/etokyotyrant/ebin \
-          $(top_builddir)/external/poolboy/ebin \
-          $(top_builddir)/external/thrift/ebin \
-          $(top_builddir)/external/erlasticsearch/ebin \
-          $(top_builddir)/external/erlang_cassandra/ebin \
-          $(top_builddir)/external/epgsql/ebin \
-          $(top_builddir)/external/emysql/ebin \
-          $(top_builddir)/external/ememcached/ebin \
-          $(top_builddir)/external/ecouchdb/ebin \
-          $(top_builddir)/external/cowboy/ebin \
-          $(top_builddir)/external/ranch/ebin \
-          $(top_builddir)/external/elli/ebin \
-          $(top_builddir)/external/dynamic_compile/ebin \
-          || exit 0
+	rmdir $(top_builddir)/lib/cloudi_core/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_core/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_api_requests/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_api_requests/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_db/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_db/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_db_cassandra/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_db_cassandra/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_db_couchdb/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_db_couchdb/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_db_elasticsearch/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_db_elasticsearch/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_db_memcached/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_db_memcached/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_db_mysql/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_db_mysql/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_db_pgsql/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_db_pgsql/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_db_tokyotyrant/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_db_tokyotyrant/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_filesystem/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_filesystem/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_http_cowboy/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_http_cowboy/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_http_elli/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_http_elli/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_map_reduce/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_map_reduce/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_quorum/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_quorum/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_tcp/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_tcp/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_timers/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_timers/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_udp/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_udp/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_work_manager/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_work_manager/ebin
+	rmdir $(top_builddir)/lib/cloudi_service_zeromq/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cloudi_service_zeromq/ebin
+	rmdir $(top_builddir)/lib/pqueue/ebin || exit 0
+	rm -f $(top_srcdir)/lib/pqueue/ebin
+	rmdir $(top_builddir)/lib/quickrand/ebin || exit 0
+	rm -f $(top_srcdir)/lib/quickrand/ebin
+	rmdir $(top_builddir)/lib/cpg/ebin || exit 0
+	rm -f $(top_srcdir)/lib/cpg/ebin
+	rmdir $(top_builddir)/lib/uuid/ebin || exit 0
+	rm -f $(top_srcdir)/lib/uuid/ebin
+	rmdir $(top_builddir)/lib/trie/ebin || exit 0
+	rm -f $(top_srcdir)/lib/trie/ebin
+	rmdir $(top_builddir)/lib/reltool_util/ebin || exit 0
+	rm -f $(top_srcdir)/lib/reltool_util/ebin
+	rmdir $(top_builddir)/lib/key2value/ebin || exit 0
+	rm -f $(top_srcdir)/lib/key2value/ebin
+	rmdir $(top_builddir)/external/nodefinder/nodefinder/ebin || exit 0
+	rm -f $(top_srcdir)/external/nodefinder/nodefinder/ebin
+	rmdir $(top_builddir)/external/nodefinder/ec2nodefinder/ebin || exit 0
+	rm -f $(top_srcdir)/external/nodefinder/ec2nodefinder/ebin
+	rmdir $(top_builddir)/external/nodefinder/combonodefinder/ebin || exit 0
+	rm -f $(top_srcdir)/external/nodefinder/combonodefinder/ebin
+	rmdir $(top_builddir)/external/jsx/ebin || exit 0
+	rm -f $(top_srcdir)/external/jsx/ebin
+	rmdir $(top_builddir)/external/etokyotyrant/ebin || exit 0
+	rm -f $(top_srcdir)/external/etokyotyrant/ebin
+	rmdir $(top_builddir)/external/poolboy/ebin || exit 0
+	rm -f $(top_srcdir)/external/poolboy/ebin
+	rmdir $(top_builddir)/external/thrift/ebin || exit 0
+	rm -f $(top_srcdir)/external/thrift/ebin
+	rmdir $(top_builddir)/external/erlasticsearch/ebin || exit 0
+	rm -f $(top_srcdir)/external/erlasticsearch/ebin
+	rmdir $(top_builddir)/external/erlang_cassandra/ebin || exit 0
+	rm -f $(top_srcdir)/external/erlang_cassandra/ebin
+	rmdir $(top_builddir)/external/epgsql/ebin || exit 0
+	rm -f $(top_srcdir)/external/epgsql/ebin
+	rmdir $(top_builddir)/external/emysql/ebin || exit 0
+	rm -f $(top_srcdir)/external/emysql/ebin
+	rmdir $(top_builddir)/external/ememcached/ebin || exit 0
+	rm -f $(top_srcdir)/external/ememcached/ebin
+	rmdir $(top_builddir)/external/ecouchdb/ebin || exit 0
+	rm -f $(top_srcdir)/external/ecouchdb/ebin
+	rmdir $(top_builddir)/external/cowboy/ebin || exit 0
+	rm -f $(top_srcdir)/external/cowboy/ebin
+	rmdir $(top_builddir)/external/ranch/ebin || exit 0
+	rm -f $(top_srcdir)/external/ranch/ebin
+	rmdir $(top_builddir)/external/elli/ebin || exit 0
+	rm -f $(top_srcdir)/external/elli/ebin
+	rmdir $(top_builddir)/external/dynamic_compile/ebin || exit 0
+	rm -f $(top_srcdir)/external/dynamic_compile/ebin
 	(if test "x$(ZEROMQ_VERSION_MAJOR)" != "x"; then : ; \
        test -d external/zeromq/v$(ZEROMQ_VERSION_MAJOR) && \
        rm -f $(top_builddir)/external/zeromq/v$(ZEROMQ_VERSION_MAJOR)/erlzmq \
@@ -482,50 +529,6 @@ rebar-directories-clean: rebar-clean
 	(test -L $(top_builddir)/lib/cloudi_core/include && \
 	 rm $(top_builddir)/lib/cloudi_core/include || \
 	 exit 0)
-	rm -f $(top_srcdir)/lib/cloudi_core/ebin \
-          $(top_srcdir)/lib/cloudi_service_api_requests/ebin \
-          $(top_srcdir)/lib/cloudi_service_db/ebin \
-          $(top_srcdir)/lib/cloudi_service_db_cassandra/ebin \
-          $(top_srcdir)/lib/cloudi_service_db_couchdb/ebin \
-          $(top_srcdir)/lib/cloudi_service_db_elasticsearch/ebin \
-          $(top_srcdir)/lib/cloudi_service_db_memcached/ebin \
-          $(top_srcdir)/lib/cloudi_service_db_mysql/ebin \
-          $(top_srcdir)/lib/cloudi_service_db_pgsql/ebin \
-          $(top_srcdir)/lib/cloudi_service_db_tokyotyrant/ebin \
-          $(top_srcdir)/lib/cloudi_service_filesystem/ebin \
-          $(top_srcdir)/lib/cloudi_service_http_cowboy/ebin \
-          $(top_srcdir)/lib/cloudi_service_http_elli/ebin \
-          $(top_srcdir)/lib/cloudi_service_map_reduce/ebin \
-          $(top_srcdir)/lib/cloudi_service_quorum/ebin \
-          $(top_srcdir)/lib/cloudi_service_tcp/ebin \
-          $(top_srcdir)/lib/cloudi_service_timers/ebin \
-          $(top_srcdir)/lib/cloudi_service_udp/ebin \
-          $(top_srcdir)/lib/cloudi_service_work_manager/ebin \
-          $(top_srcdir)/lib/cloudi_service_zeromq/ebin \
-          $(top_srcdir)/lib/pqueue/ebin \
-          $(top_srcdir)/lib/quickrand/ebin \
-          $(top_srcdir)/lib/cpg/ebin \
-          $(top_srcdir)/lib/uuid/ebin \
-          $(top_srcdir)/lib/trie/ebin \
-          $(top_srcdir)/lib/reltool_util/ebin \
-          $(top_srcdir)/lib/key2value/ebin \
-          $(top_srcdir)/external/nodefinder/nodefinder/ebin \
-          $(top_srcdir)/external/nodefinder/ec2nodefinder/ebin \
-          $(top_srcdir)/external/nodefinder/combonodefinder/ebin \
-          $(top_srcdir)/external/jsx/ebin \
-          $(top_srcdir)/external/etokyotyrant/ebin \
-          $(top_srcdir)/external/poolboy/ebin \
-          $(top_srcdir)/external/thrift/ebin \
-          $(top_srcdir)/external/erlasticsearch/ebin \
-          $(top_srcdir)/external/erlang_cassandra/ebin \
-          $(top_srcdir)/external/epgsql/ebin \
-          $(top_srcdir)/external/emysql/ebin \
-          $(top_srcdir)/external/ememcached/ebin \
-          $(top_srcdir)/external/ecouchdb/ebin \
-          $(top_srcdir)/external/cowboy/ebin \
-          $(top_srcdir)/external/ranch/ebin \
-          $(top_srcdir)/external/elli/ebin \
-          $(top_srcdir)/external/dynamic_compile/ebin
 
 clean-configure: distclean
 
@@ -568,6 +571,7 @@ rebar-directories-distclean:
 	test -e $(top_builddir)/rebar && rm -f $(top_builddir)/rebar || exit 0
 
 erlang-applications-scope-remove:
+	rm -f scoped
 	$(ESCRIPT) $(top_srcdir)/lib/reltool_util/scope $(SCOPE_ARGS) -u
 
 dialyze: all \
