@@ -1,6 +1,6 @@
 {application, uuid,
   [{description, "Native UUID Generation"},
-   {vsn, "1.3.0"},
+   {vsn, "1.3.1"},
    {modules, [uuid]},
    {registered, []},
    {applications, [quickrand, stdlib]}]}.
