@@ -1,6 +1,12 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2013-10-25 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Fix the cloudi_x_ scope script operation for source code repo updates
+      within a built repository
+    * Update reltool_util and uuid
+
 2013-10-24 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fix cloudi:mcast_async function call
